# jarvis

./: .env_template  .gitignore  Dockerfile  README.md  TODO.txt  docker-compose.yml  pyproject.toml
app/: main.py
lib/: agents.py  cache.py  chatbot.py  llm.py  logger.py  run_config.py  smart_device.py  tools.py  tools_utils.py
