[project]
name = "app"
version = "0.1.0"
description = "Personal_assistant"
package-mode = false
authors = [
    {name = "kuba",email = "jakub.nowakowski01@onet.pl"}
]
readme = ""
requires-python = ">=3.10,<4.0"
dependencies = [
    "langchain (>=0.3.27)",
    "redis (>=6.4.0,<7.0.0)",
    "dotenv (>=0.9.9,<0.10.0)",
    "openai (>=2.3.0,<3.0.0)",
    "langchain-community (>=0.3.31)",
    "langchain-groq (>=0.3.8)",
    "groq (>=0.32.0,<0.33.0)",
    "langchain-core (>=0.3.79)",
    "langchain-openai (>=1.0.0,<2.0.0)",
    "langgraph (>=1.0.0,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
