[project]
name = "app"
version = "0.1.0"
description = "Personal_assistant"
package-mode = false
authors = [
    {name = "kuba",email = "jakub.nowakowski01@onet.pl"}
]
readme = ""
requires-python = ">=3.10,<4.0"
dependencies = [
    "redis (>=6.4.0,<7.0.0)",
    "dotenv (>=0.9.9,<0.10.0)",
    "openai (>=2.3.0,<3.0.0)",
    "groq (>=0.32.0,<0.33.0)",
    "openai-agents (>=0.4.1,<0.5.0)",
    "aioredis (>=2.0.1,<3.0.0)",
    "tinytuya (>=1.17.4,<2.0.0)",
    "pydantic (>=2.0)",
    "googlemaps (>=4.10.0,<5.0.0)",
    "datetime (>=5.5,<6.0)",
]

[tool.poetry]
packages = [{include = "lib"}, {include = "app"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
